# order-book

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  orderbook  test  test.cpp
.claude/: settings.json
.claude/skills/: benchmark-optimization-loop  cpp-coding-standards
.claude/skills-archive/benchmark-optimization-loop/: SKILL.md
.github/workflows/: ci.yml
.reference/: ECC_SKILLS_README.md
apps/: demo_main.cpp  four_book_demo.cpp  four_book_events_demo.cpp
benchmarks/: four_book_benchmark.cpp  orderbook_benchmark.cpp
docs/: architecture.md  benchmarking.md  four-book-threading-plan.md
include/orderbook/: book_id.hpp  engine.hpp  event_stream.hpp  events.hpp  four_book_engine.hpp  order_book.hpp  order_index.hpp  order_pool.hpp  types.hpp
src/: engine.cpp  events.cpp  four_book_engine.cpp  order_book.cpp  order_index.cpp  order_pool.cpp
tests/: test_engine.cpp  test_event_stream.cpp  test_four_book_engine.cpp  test_framework.hpp  test_order_book.cpp
